--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -7,7 +7,7 @@
 	<script src="/script.js?<?=STATIC_VERSION?>"></script>
 	
 	<?php if ( WEB ) { ?>
-  	<link rel="icon" href="/logo.png">
+  	<link rel="icon" href="/favicon.ico">
   	<meta name="description" content="<?=isset($description) ? $description : 'Upload files from command line to cloud and then download to desktop or server'?>">
   	<meta name="keywords" content="Upload from command line, upload using bash, upload file to server, download file from server">
   	<meta name="author" content="zeroapps.dev">
