update front view

--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -24,7 +24,7 @@
 			<?php } else { ?>
 				<h1>bashupload</h1>
 				<p>
-				  Upload files from command line to easily share between servers, desktops and mobiles, <?=file_upload_max_size()?> max.
+				  Upload files directly from the command line for easily sharing. <?=file_upload_max_size()?> max.
 				  Files are stored for <?=EXPIRE_DAYS?> days<?=MAX_DOWNLOADS > 1 ? '' : ' and can be downloaded only once' ?>.
 				</p>
 			<?php } ?>
@@ -34,12 +34,11 @@
 	</div>
 
 	<footer>
-		by <a target="_blank" href="https://github.com/IO-Technologies">IO tech</a>
-		based on <a target="_blank" href="/disclaimer">terms & conditions</a>
-		<br/>
-		
-		report bugs, leave notes or help
-		<a href="https://github.com/denfromio/bashupload" target="_blank">on github</a>
+		Forked from <a href="https://github.com/denfromio/bashupload" target="_blank">bashupload</a>
+		by <a target="_blank" href="http://scuti.asia">Scuti</a>.
+		<br>
+		<a target="_blank" href="/disclaimer">Terms of Use</a>
+		<br/>		
 	</footer>
 	
 </body>
