change base web

--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -3,8 +3,8 @@
 <head>
   <title><?=isset($title) ? $title : 'bashupload / upload files from command line'?></title>
   
-	<link rel="stylesheet" href="<?=BASE_URI?>/web/styles.css?<?=STATIC_VERSION?>">
-	<script src="<?=BASE_URI?>/web/script.js?<?=STATIC_VERSION?>"></script>
+	<link rel="stylesheet" href="<?=BASE_WEB?>/web/styles.css?<?=STATIC_VERSION?>">
+	<script src="<?=BASE_WEB?>/web/script.js?<?=STATIC_VERSION?>"></script>
 	
 	<?php if ( WEB ) { ?>
   	<link rel="icon" href="/favicon.ico">
