--- a/views/upload.txt.phtml
+++ b/views/upload.txt.phtml
@@ -26,7 +26,7 @@ if ( $uploads )
 
 	foreach ( $uploads as $file ) 
 	{
-		$url = $_SERVER['REQUEST_SCHEME'] . '://' . HOST . '/' . $file['id'] . '/' . $file['name'];
+		$url = $_SERVER['REQUEST_SCHEME'] . '://' . HOST . '/bashupload/files' . $file['id'] . '/' . $file['name'];
 		echo "wget {$url}" . "\n";
     echo "\n";
 	}
