--- a/views/upload.json.phtml
+++ b/views/upload.json.phtml
@@ -2,7 +2,7 @@
 
 $total = 0;
 foreach ( $uploads as $file ) $res[$file['upload_name']] = [
-	'url' => $_SERVER['REQUEST_SCHEME'] . '://' . HOST . '/' . $file['id'] . '/' . $file['name'],
+	'url' => $_SERVER['REQUEST_SCHEME'] . '://' . HOST . '/bashupload/files/' . $file['id'] . '/' . $file['name'],
 	'size' => number_format($file['size'], 0, '.', ' ')
 ];
 
