--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -19,12 +19,11 @@
 <body>
 	<div id="content">
 		<header>
-			<?php if ( $uri != '/' ) { ?>
-				<p>The <b><a href="/">bashupload</a></b> is a place to upload files from command line or other ways and download them elsewhere.
-			<?php } else { ?>
-				<h1>bashupload</h1>
+			<?php if ( $uri != BASE_WEB ) { ?>
+				<h1>Scuti's bashupload</h1>
 				<p>
 				  Upload files directly from the command line for easily sharing. <?=file_upload_max_size()?> max.
+				  <br>
 				  Files are stored for <?=EXPIRE_DAYS?> days<?=MAX_DOWNLOADS > 1 ? '' : ' and can be downloaded only once' ?>.
 				</p>
 			<?php } ?>
@@ -36,8 +35,6 @@
 	<footer>
 		Forked from <a href="https://github.com/denfromio/bashupload" target="_blank">bashupload</a>
 		by <a target="_blank" href="http://scuti.asia">Scuti</a>.
-		<br>
-		<a target="_blank" href="/disclaimer">Terms of Use</a>
 		<br/>		
 	</footer>
 	
