--- a/views/upload.txt.phtml
+++ b/views/upload.txt.phtml
@@ -2,33 +2,30 @@
 
 # Output streamed if was fed
 
-if ( $error )
-{
+if ($error) {
 	echo "\n";
 	echo 'Error: ';
 	echo $error . "\n\n";
 }
 
-if ( $uploads )
-{
+if ($uploads) {
 	echo "\n";
-	
 	echo '=========================';
-	
 	echo "\n\n";
 
 	$total = 0;
-	foreach ( $uploads as $file ) $total += $file['size'];
+	foreach ($uploads as $file) {
+        $total += $file['size'];
+    }
 
 	echo 'Uploaded ' .
 			count($uploads) . ' file, ' .
 			number_format($total, 0, '.', ' ') . ' bytes' . "\n\n";
 
-	foreach ( $uploads as $file ) 
-	{
+	foreach ($uploads as $file) {
 		$url = $_SERVER['REQUEST_SCHEME'] . '://' . HOST . '/bashupload/files' . $file['id'] . '/' . $file['name'];
 		echo "wget {$url}" . "\n";
-    echo "\n";
+        echo "\n";
 	}
 	
 	echo '=========================';
