--- a/views/upload.json.phtml
+++ b/views/upload.json.phtml
@@ -1,11 +1,16 @@
 <?php
 
 $total = 0;
-foreach ( $uploads as $file ) $res[$file['upload_name']] = [
-	'url' => $_SERVER['REQUEST_SCHEME'] . '://' . HOST . '/bashupload/files/' . $file['id'] . '/' . $file['name'],
-	'size' => number_format($file['size'], 0, '.', ' ')
-];
 
-if ( $error ) $res['error'] = $error;
+foreach ($uploads as $file) {
+    $res[$file['upload_name']] = [
+        'url' => $_SERVER['REQUEST_SCHEME'] . '://' . HOST . '/bashupload/files/' . $file['id'] . '/' . $file['name'],
+        'size' => number_format($file['size'], 0, '.', ' ')
+    ];
+}
+
+if ($error) {
+    $res['error'] = $error;
+}
 
 echo json_encode($res);
