--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -33,7 +33,8 @@
 	<footer>
 		Forked from <a href="https://github.com/denfromio/bashupload" target="_blank">bashupload</a>
 		by <a target="_blank" href="http://scuti.asia">Scuti</a>.
-		<br/>		
+		<br/>
+        <img src="/assets/img/scuti-logo.png" alt="Scuti Vietnam">
 	</footer>
 	
 </body>
