--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -34,7 +34,7 @@
 		Forked from <a href="https://github.com/denfromio/bashupload" target="_blank">bashupload</a>
 		by <a target="_blank" href="http://scuti.asia">Scuti</a>.
 		<br/>
-        <img src="/assets/img/scuti-logo-small.png" alt="Scuti Vietnam">
+        <img src="/assets/img/scuti-logo-small.jpg" alt="Scuti Vietnam">
 	</footer>
 	
 </body>
