--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -31,7 +31,7 @@
 	</div>
 
 	<footer>
-        <img src="/bashupload/assets/img/scuti-logo-small.jpg" alt="Scuti Vietnam" style="width:">
+        <img src="/bashupload/assets/img/scuti-logo-small.jpg" alt="Scuti Vietnam">
         <br>
         Forked from <a href="https://github.com/denfromio/bashupload" target="_blank">bashupload</a>
         by <a target="_blank" href="http://scuti.asia">Scuti</a>.
