add link to image

--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -31,7 +31,9 @@
 	</div>
 
 	<footer>
-        <img src="/bashupload/assets/img/scuti-logo-small.jpg" alt="Scuti Vietnam">
+        <a href="http://scuti.asia">
+            <img src="/bashupload/assets/img/scuti-logo-small.jpg" alt="Scuti Vietnam">
+        </a>
         <br>
         Forked from <a href="https://github.com/denfromio/bashupload" target="_blank">bashupload</a>
         by <a target="_blank" href="http://scuti.asia">Scuti</a>.
